solution-a-gitops/kustomize/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: maec-scsp-prod
  labels:
    app.kubernetes.io/name: maec-scsp
    app.kubernetes.io/part-of: interoperabilidad-sara
    environment: production
