solution-a-gitops/kustomize/base/external-db-endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: scsp-database-gateway
  namespace: maec-scsp-prod
subsets:
  - addresses:
      - ip: 10.50.25.105 # IP externa del MS SQL Server en Red SARA
    ports:
      - name: tds
        port: 1433
