solution-a-gitops/kustomize/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: scsp-frontend
  namespace: maec-scsp-prod
  labels:
    app: scsp-frontend
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: scsp-frontend
