solution-a-gitops/kustomize/base/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: scsp-frontend
  namespace: maec-scsp-prod
  labels:
    app: scsp-frontend
spec:
  to:
    kind: Service
    name: scsp-frontend
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
